Removed java11 source folders since JDK-11 is the baseline now (#2898)
Signed-off-by: Andriy Redko <andriy.redko@aiven.io>
(cherry picked from commit d61d170332be07b809cc982f0a5dc5a3d6148d77)